--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,39 @@
+Thumbs.db
+.tmp*
+tmp
+.target
 *.class
 *.log
+out
+/bin/
+
+# sbt specific
+.cache*
+.history
+.lib
+target
+lib_managed
+src_managed
+project/boot
+project/plugins/project
+
+# Scala-IDE specific
+.scala_dependencies
+.worksheet
+
+# Eclipse specific
+.classpath
+.settings
+.project
+.eclipse
+
+# IntelliJ specific
+.idea
+*.iml
+.idea_modules
+
+# Metals specific
+.metals
+
+# Mac specific
+.DS_Store*
