--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,4 +2,6 @@ akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
   loglevel = "DEBUG"
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+
+  actor.allow-java-serialization = true
 }
